# Automotive_software_final

./: .gitignore  401304  401304.pub  Final_Plan(Vspice).docx  README.md  launch.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ad_msgs/share/ad_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ad_msgs/share/ad_msgs/cmake/: ad_msgsConfig-version.cmake  ad_msgsConfig.cmake  ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  (+4 more)
install/autonomous_driving/lib/autonomous_driving/: simultaneous_inputs.py
install/autonomous_driving/share/autonomous_driving/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/evaluation/share/evaluation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mission_manager/lib/mission_manager/: mission_manager
install/mission_manager/share/mission_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/simulator/lib/simulator/: lane_detection
install/simulator/share/simulator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
resources/csv/simulation_lane/: Lane_1.csv  Lane_2.csv  Lane_3.csv
resources/rviz/: markerArray.rviz  ros2_practice.rviz
src/app/autonomous_driving/: CMakeLists.txt  package.xml
src/app/autonomous_driving/include/: autonomous_driving_config.hpp  autonomous_driving_node.hpp  behavior_planner_node.hpp  control_node.hpp  driving_way_node.hpp  kalman_filter.hpp  motion_prediction_node.hpp  parking_node.hpp  track.hpp  tracker.hpp  trajectory_planner.hpp  trajectory_planner_node.hpp  trajectory_planner_node_temp.hpp
src/app/autonomous_driving/launch/: autonomous_driving.launch.xml
src/app/autonomous_driving/src/: autonomous_driving_node.cpp  behavior_planner_node.cpp  control_node.cpp  driving_way_node.cpp  ego_position.csv  get_ref.cpp  get_ref.py  hungarianAlg.cpp  kalman_filter.cpp  max_a3.py  motion_prediction.cpp  motion_prediction_node.cpp  pakring_node.cpp  tracker.cpp  trajectory_planner.cpp  trajectory_planner_node.cpp  trajectory_planner_node_temp.cpp
src/app/evaluation/: CMakeLists.txt
src/app/evaluation/include/: evaluation_algorithm.hpp  evaluation_config.hpp  evaluation_node.hpp
src/app/evaluation/launch/: evaluation.launch.xml
src/app/evaluation/src/: evaluation_node.cpp
src/app/mission_manager/: CMakeLists.txt
src/app/mission_manager/include/: mission_manager_node.hpp
src/app/mission_manager/launch/: mission_manager.launch.xml
src/app/mission_manager/src/: mission_manager_node.cpp
src/app/simulator/: CMakeLists.txt
src/bsw/system/bridge/: ros2_bridge_evaluation.hpp  ros2_bridge_mission.hpp
src/bsw/system/interface/: interface_mission.hpp  interface_vehicle.hpp
(+235 files in other folders)
